# flask-cookiecutter

./: README.md  catalog-info.yaml  mkdocs.yml
{{cookiecutter.project_name}}/: .flake8  .gitignore  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  catalog-info.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/cloudbuild/: .cloudbuild.yaml
{{cookiecutter.project_name}}/code/: Dockerfile  app.yaml  requirements.txt  web.py
{{cookiecutter.project_name}}/code/views/: version.py
{{cookiecutter.project_name}}/docs/: index.md
