[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["Making Science"]
readme = "README.md"
packages = [{include = "code"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
flask = "^2.2.3"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"
